syntax = "proto3";

option csharp_namespace = "Discount.Grpc";

package discount;	

service DiscountProtoService
{
	rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest
{
	string productName = 1;
}

message CouponModel
{
	Guid Id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

